fixed alert button spacing for mobile

--- a/_assets/css/button.scss
+++ b/_assets/css/button.scss
@@ -61,17 +61,16 @@
 //    left: 48%;
 //    right: 1rem;
     position: absolute;
-    width: auto;
-
     left: 58%;
     border-radius: 0 0 0.2em 0.2em;
     box-shadow: 0px 6px 12px rgba(19, 19, 25, 0.9);
+    transform: translateY(-7px);
   }
 }
 
 @media screen and (max-width: 64em) {
   .alert-button {
-    width: auto;
+    width: 100%;
   }
 }
 
@@ -86,9 +85,8 @@
   cursor: pointer;
   font-weight: bold;
 
-  transform: translateY(-7px);
-
 }
+
 .alert-button:hover {
   background-color: #fdb81e;
   color: #fff;
